--- a/plugin.yml
+++ b/plugin.yml
@@ -1,17 +1,19 @@
 name: BlocksConverter
 version: 2.2.3
-api: 3.0.0
-author: matcracker
+api: 5.0.0
+author: matcracker, JonasWindmann
 main: matcracker\BlocksConverter\Loader
 
 permissions:
     blocksconverter.commands:
         description: Allows using all plugin commands
         default: op
-        children:
-            blocksconverter.command.convertqueue:
-                description: Allows using /convertqueue command.
-            blocksconverter.command.convert:
-                description: Allows using /convert command.
-            blocksconverter.command.toolblock:
-                description: Allows using /toolblock command.
+    blocksconverter.command.convertqueue:
+        description: Allows using /convertqueue command.
+        default: op
+    blocksconverter.command.convert:
+        description: Allows using /convert command.
+        default: op
+    blocksconverter.command.toolblock:
+        description: Allows using /toolblock command.
+        default: op
